# slice-cpp-gen

./: .gitignore  .travis.yml  Readme.markdown  slice-cpp-gen.cabal
src/: slice-cpp-gen.hs
