name:                slice-cpp-gen
version:             0.1.0.0
synopsis:            Generate C++ skeletons from slice files
-- description:         
homepage:            https://github.com/paulkoerbitz/slice-cpp-gen
license:             BSD3
license-file:        LICENSE
author:              Paul Koerbitz
maintainer:          paul.koerbitz@gmail.com
-- copyright:           
category:            Development
build-type:          Simple
cabal-version:       >=1.8

executable slice-cpp-gen
  main-is:             slice-cpp-gen.hs
  build-depends:       base ==4.6.*,
                       bytestring,
                       cmdargs,
                       directory,
                       filepath,
                       language-slice >= 0.1
  hs-source-dirs:      src